# toolbox

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/: settings.local.json
gkeep_api/: README.md  go.mod
gkeep_api/cmd/: main.go
gkeep_api/configs/: config.go
gkeep_api/internal/api/: client.go  notes.go
gkeep_api/internal/models/: note.go
google_calendar/: add_google_event.py  sample_events.json
misc/: reverse_letters.py
pdf/: concat_pdf.py  filigrane_gouv.py
specific_cleaner/: date_organizer.py  doc_cleaner.py  extension_analyzer.py  own.ps1
timerz/: clockify.py
