[project]
name = "toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]


[project.optional-dependencies]
google_calendar = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]